--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # generated log files
-logs/*
+web/logs/*
 
 # Windows image file caches
 Thumbs.db
@@ -12,4 +12,4 @@ Desktop.ini
 .DS_Store
 bootstrap.min.css
 
-app/node/node_modules/*
+server/node/node_modules/*
