--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # generated log files
-web/logs/*
+logs/*
+/web/logs/*
 
 # Windows image file caches
 Thumbs.db
@@ -10,6 +11,5 @@ Desktop.ini
 
 # Mac .DS_Store files
 .DS_Store
-bootstrap.min.css
 
-server/node/node_modules/*
+server/node_modules
